# lliurex-plymouth-theme

./: CMakeLists.txt  lliurex-plymouth  lliurex.plymouth  log.c  log.h  plugin.c  test.sh
debian/: changelog  control  copyright  lliurex-plymouth-theme.postinst
src/: CMakeLists.txt  cmdline.c  cmdline.h  i18.c  i18.h  log.c  log.h  noise.c  noise.h  plugin.c  raster.c  raster.h  text.c  text.h  texture.c  texture.h
